# cluck

./: CMakeLists.txt  README.md  TODO.md
cluck/: CMakeLists.txt  cluck.cpp  cluck.h  cluck_status.cpp  cluck_status.h  exception.h  names.an  version.cpp  version.h.in
cmake/: CMakeLists.txt  CluckConfig.cmake
conf/: CMakeLists.txt  README.md  cluck-daemon.conf  cluck.conf  cluck.service  cluckd.ini  cluckd.service
conf/logger/: README.md  cluck-daemon.conf  cluck.conf  cluckd.conf
daemon/: CMakeLists.txt  cluckd.cpp  cluckd.h  computer.cpp  computer.h  debug_info.cpp  debug_info.h  info.cpp  info.h  interrupt.cpp  interrupt.h  main.cpp  message_cache.h  messenger.cpp  messenger.h  snaplock.cpp  snaplock.h  snaplock_debug_info.cpp  snaplock_info.cpp  snaplock_interrupt.cpp  snaplock_messenger.cpp  snaplock_ticket.cpp  snaplock_timer.cpp  snaplock_tool.cpp  ticket.cpp  ticket.h  timer.cpp  timer.h
daemon/message-definitions/: ACTIVATE_LOCK.conf  ADD_TICKET.conf  CMakeLists.txt  DROP_TICKET.conf  GET_MAX_TICKET.conf  INFO.conf  LIST_TICKETS.conf  LOCK.conf  LOCKED.conf  LOCK_ACTIVATED.conf  LOCK_ENTERED.conf  LOCK_ENTERING.conf  LOCK_EXITING.conf  LOCK_FAILED.conf  LOCK_LEADERS.conf  LOCK_READY.conf  LOCK_STARTED.conf  LOCK_STATUS.conf  LOCK_TICKETS.conf  MAX_TICKET.conf  NO_LOCK.conf  TICKET_ADDED.conf  TICKET_LIST.conf  TICKET_READY.conf  UNLOCK.conf  UNLOCKED.conf  UNLOCKING.conf
debian/: changelog  cluck-doc.doc-base  cluck-doc.install  cluck.install  cluck.logrotate  cluck.postinst  cluck.postrm  cluck.service  cluck.sysuser  control  copyright
doc/: CMakeLists.txt  cluck-messages.msc  cluck.doxy.in  snaplock.doxy.in
manager-plugins/: CMakeLists.txt
manager-plugins/lock/: CMakeLists.txt  lock.cpp  lock.h
tests/: CMakeLists.txt  catch_cluck.cpp  catch_daemon.cpp  catch_daemon_computer.cpp  catch_daemon_ticket.cpp  catch_main.cpp  catch_main.h  catch_version.cpp  emit-cluck-status.sh  leaders.sh  test_cluck.cpp  test_multi_clucks.cpp  test_multi_clucks.h
tests/rprtr/: cluck_daemon_test.rprtr  cluck_daemon_test_cache_timeout.rprtr  cluck_daemon_test_early_lock_leaders.rprtr  cluck_daemon_test_forwarder.rprtr  cluck_daemon_test_four_computers.rprtr  cluck_daemon_test_interrupt_signal.rprtr  cluck_daemon_test_lock_tickets.rprtr  cluck_daemon_test_one_computer.rprtr  cluck_daemon_test_ten_computers.rprtr  cluck_daemon_test_three_computers.rprtr  cluck_daemon_test_timeout.rprtr  cluck_daemon_test_two_computers.rprtr  drop_entering_ticket.rprtr  explicit_unlocking.rprtr  extended_lock.rprtr  failed_with_error_missing.rprtr  failed_with_invalid_tag.rprtr  failed_with_max_ticket_too_large.rprtr  failed_with_max_too_large.rprtr  failed_with_other_error.rprtr  failed_with_timeout.rprtr  failed_with_timing_out_entering.rprtr  failed_with_too_many_locks.rprtr  failed_with_too_many_off_v1.rprtr  failed_with_too_many_off_v2.rprtr  failed_with_too_many_off_v3.rprtr  failed_with_too_many_off_v4.rprtr  ignored_transmission_report.rprtr  invalid_parameters_lock.rprtr  invalid_parameters_unlock.rprtr  invalid_unlocking.rprtr  late_explicit_unlocking.rprtr  lock_timing_out.rprtr  locked_timing_out.rprtr  locking_timing_out.rprtr  successful_lock.rprtr  transmission_report_not_sent.rprtr
tools/: CMakeLists.txt
tools/cluck_status/: CMakeLists.txt  main.cpp  messenger.cpp  messenger.h  server.cpp  server.h
tools/lock_status/: CMakeLists.txt  messenger.cpp
